Mockito, Arquilian and DBUnit tests okay